--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -31,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "npm run dev"
   },
   "eslintConfig": {
     "extends": [
