--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
+    "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jwt-decode": "^2.2.1"
+    "@types/jwt-decode": "^2.2.1",
+    "@types/validator": "^13.12.2"
   }
 }
